# sshtui

./: Cargo.toml  README.md  TEST_INSTRUCTIONS.md  config.json
src/: config.rs  dashboard.rs  main.rs  main_simple.rs  modal.rs  ssh.rs  terminal_panel.rs  ui.rs  ui_simple.rs
